--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,12 +5,23 @@
   <aside class="left-sidebar">
     <h2>MOST POPULAR</h2>
     <div class="popular-article">
-      <img src="/images/popular1.jpg" alt="Popular Article">
+      <img src="img/np1.jpg" alt="Popular Article">
       <p>BUSINESS</p>
       <h3>Innovative Strategies for Growth</h3>
       <p>9/3/2022</p>
     </div>
+    <br>
+    <h2>MOST POPULAR</h2>
+    <div class="popular-article">
+      <img src="img/build1.jpg" alt="Popular Article">
+      <p>BUSINESS</p>
+      <h3>Innovative Strategies for Growth</h3>
+      <p>9/3/2022</p>
+    </div>
+
   </aside>
+
+  
 
   <section class="hero-section">
     <h1>THE BEAUTY OF DESIGN</h1>
@@ -25,7 +36,14 @@
     </div>
     <div class="featured">
       <h2>FEATURED</h2>
-      <img src="/images/featured.jpg" alt="Featured Article">
+      <img src="img/face.jpg" alt="Featured Article">
+      <h3>The Future of Technology</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+<br>
+    <div class="featured">
+      <h2>FEATURED</h2>
+      <img src="img/face2.jpg" alt="Featured Article">
       <h3>The Future of Technology</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
