--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,8 +31,10 @@
   <aside class="right-sidebar">
     <div class="latest">
       <h2>LATEST</h2>
-      <p><strong>TECHNOLOGY</strong> Transform Our Connected World</p>
-      <p><strong>SPORTS</strong> Train Like a Pro Athlete</p>
+      TECHNOLOGY <br>
+        <p><strong>Transform Our Connected World</strong></p>
+      SPORTS</strong> <br> <br>
+        <strong>Train Like a Pro Athlete</strong></p>
     </div>
     <div class="featured">
       <h2>FEATURED</h2>
