--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
 
   <section class="hero-section">
     <h1>THE BEAUTY OF DESIGN</h1>
-    <img src="img/girl.jpg" alt="girl">
+    <img src="img/girl2.jpg" alt="girl">
   </section>
 
   <aside class="right-sidebar">
