--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -1,9 +1,9 @@
 <footer>
     <div>
       <h3>DE GUSTIBUS</h3>
-      <p>A modern website showcasing design and visual content.</p>
+      <p>A modern website showcasing blogs.</p>
     </div>
-    <p>&copy; 2025 De Gustibus. Designed and developed by [Your Name].</p>
+    <p>&copy; 2025 Pulse. Designed and developed by Karthika & Harish.</p>
   </footer>
   </body>
   </html>
