--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,11 +6,12 @@
         <div class="dropdown">
           <button class="dropbtn" onclick="toggleDropdown(event)">Blogs</button>
           <div class="dropdown-content">
-              <a href="#">All</a>
-              <a href="#">Portraits</a>
-              <a href="#">Couples</a>
-              <a href="#">Fashion</a>
-              <a href="#">Freestyle</a>
+              <a href="/">All</a>
+              <a href="/health">Health</a>
+              <a href="/design">Design</a>
+              <a href="/tech">Technology</a>
+              <a href="/cimate">Climate</a>
+              <a href="/sports">Sports</a>
           </div>
         
 
