--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulse | Blogs</title>
-  <link rel="stylesheet" href="/style.css">
+  <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/<%= pageStyle %>">
 </head>
 <body>
