--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,6 @@
       <h3>Innovative Strategies for Growth</h3>
       <p>9/3/2022</p>
     </div>
-
   </aside>
 
   
@@ -43,7 +42,7 @@
       <h3>The Future of Technology</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
-<br>
+    <br>
     <div class="featured">
       <h2>FEATURED</h2>
       <img src="img/face2.jpg" alt="Featured Article">
@@ -67,7 +66,7 @@
       </article>
 
       <article class="post">
-        <img src="img/fruit.jpg" alt="Tropical fruits">
+        <img src="img/health1.jpg" alt="Tropical fruits">
         <h2>Understanding Nutrition Labels</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
         <div class="meta">
@@ -77,7 +76,7 @@
       </article>
 
       <article class="post">
-        <img src="img/fruit.jpg" alt="Tropical fruits">
+        <img src="img/health2.jpg" alt="Tropical fruits">
         <h2>Understanding Nutrition Labels</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
         <div class="meta">
