--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -10,7 +10,7 @@
               <a href="/health">Health</a>
               <a href="/design">Design</a>
               <a href="/tech">Technology</a>
-              <a href="/cimate">Climate</a>
+              <a href="/climate">Climate</a>
               <a href="/sports">Sports</a>
           </div>
         
