--- a/public/style.css
+++ b/public/style.css
@@ -254,7 +254,7 @@ div .dropdown {
     width: 100%;
     height: 250px;
     object-fit: cover;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     margin-bottom: 15px;
   }
 
