--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div>
-      <h3>DE GUSTIBUS</h3>
+      <h3>PULSE</h3>
       <p>A modern website showcasing blogs.</p>
     </div>
     <p>&copy; 2025 Pulse. Designed and developed by Karthika & Harish.</p>
