--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -18,7 +18,7 @@
       <div class="middle">
         <input type="text" placeholder="Search..." class="searchbar">
       </div></div>
-      <div class="end"><a href="">Sign in/sign up</a></div>
+      <div class="end"><a href="/signin">Sign in/sign up</a></div>
     </div>
       </header>
       
