--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -5,5 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
   <link rel="stylesheet" href="/<%= pageStyle %>">
+
+  <script src="/js/main.js" defer></script>
 </head>
 <body>
