--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,11 +1,14 @@
-// views/details.ejs
-<%- include('includes/head',{ pageTitle: article.title, pageStyle: 'details.css' }) %>
+<%- include('includes/head', { pageTitle: article.title, pageStyle: 'details.css' }) %>
 <%- include('includes/navigation') %>
 
 <main class="content">
   <section class="hero-section">
     <h1><%= article.title %></h1>
-    <img src="<%= article.image %>" alt="<%= article.title %>">
+    <% if (article.image) { %>
+      <img src="<%= article.image %>" alt="<%= article.title %>" class="article-image">
+    <% } else { %>
+      <p>No image available for this article.</p>
+    <% } %>
     <div class="writing">
       <p><%= article.content %></p>
     </div>
@@ -14,11 +17,15 @@
   <aside class="right-sidebar">
     <div class="latest">
       <h2>RELATED ARTICLES</h2>
-      <% relatedArticles.forEach(related => { %>
-        <a href="/details/<%= related._id %>">
-          <p><strong><%= related.title %></strong></p>
-        </a>
-      <% }) %>
+      <% if (relatedArticles && relatedArticles.length > 0) { %>
+        <% relatedArticles.forEach(related => { %>
+          <a href="/details/<%= related._id %>" class="related-article">
+            <p><strong><%= related.title %></strong></p>
+          </a>
+        <% }) %>
+      <% } else { %>
+        <p>No related articles found.</p>
+      <% } %>
     </div>
   </aside>
 </main>
