--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -7,9 +7,13 @@
     <div class="dropdown">
       <button class="dropbtn">Blogs</button>
       <div class="dropdown-content">
-        <% categories.forEach(category => { %>
-          <a href="/<%= category.toLowerCase() %>"><%= category %></a>
-        <% }); %>
+        <% if (categories && categories.length) { %>
+          <% categories.forEach(category => { %>
+            <a href="/<%= category.toLowerCase() %>"><%= category %></a>
+          <% }); %>
+        <% } else { %>
+          <p>No categories available</p>
+        <% } %>
       </div>
     </div>
  
