--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,16 +5,15 @@
   <h1>Sign In / Sign Up</h1>
   <div class="signin-form">
     <form action="/signin" method="POST">
-      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- CSRF token -->
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
-      
+    
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required>
-      
+    
       <button type="submit">Sign In</button>
     </form>
-    
     <p>Don't have an account? <a href="/signup">Sign Up</a></p>
   </div>
 </main>
