--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head', { pageTitle: article.title, pageStyle: 'details.css' }) %>
-<%- include('includes/navigation') %>
+<%- include('includes/navigation', { currentPage: 'article.title' }) %>
 
 <main class="content">
   <section class="hero-section">
