--- a/views/health.ejs
+++ b/views/health.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head',{ pageTitle: 'Health | Blogs', pageStyle: 'health.css' }) %>
-<%- include('includes/navigation') %>
+<%- include('includes/navigation', { currentPage: 'Health | Blogs' }) %>
 
 <div class="featured">
     <h1><%= sectionTitle %></h1> <!-- Dynamic section title -->
