--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head', { pageTitle: 'Sign Up | Pulse Blogs', pageStyle: 'style.css' }) %>
-<%- include('includes/navigation') %>
+<%- include('includes/navigation', { currentPage: 'Sign up' }) %>
 
 <main class="signin-container">
  <h1>Create Account</h1>
