--- a/views/write.ejs
+++ b/views/write.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head', { pageTitle: 'Write Blog', pageStyle: 'style.css' }) %>
-<%- include('includes/navigation') %>
+<%- include('includes/navigation', { currentPage: 'write' }) %>
 
 <main class="write-container">
     <h1>Write a Blog</h1>
