--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,6 @@
 // views/home.ejs
 <%- include('includes/head',{ pageTitle: 'Pulse | Blogs', pageStyle: 'style.css' }) %>
-
-<%- include('includes/navigation') %>
-
+<%- include('includes/navigation', { currentPage: 'Pulse | Blogs' }) %>
 
 
 
